--- a/src/ProtonDrive.App.Windows/Resources/Strings.nb-NO.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.nb-NO.resx
@@ -935,9 +935,6 @@ deaktivere lagringsoptimalisering når som helst.</value>
   <data name="Main_Photos_Folders_Error_ImportFailed">
     <value>Import mislyktes. Prøv å fjerne mappen og importere den på nytt. Hvis problemet vedvarer, kontakt brukerstøtte.</value>
   </data>
-  <data name="PhotoImportErrorCode_Value_Unknown">
-    <value>Import mislyktes. Prøv på nytt.</value>
-  </data>
   <data name="Main_Photos_Folders_ImportedItemsFormat">
     <value>Importerte {0} av {1}</value>
   </data>
@@ -1396,6 +1393,18 @@ Innholdet i filer vil kun bli lastet ned på forespørsel.</value>
   </data>
   <data name="Onboarding_UpgradeStorage_Title">
     <value>Skaff deg mer lagringskapasitet</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_AlbumDoesNotExist">
+    <value>Importen var ikke vellykket. Albumet finnes ikke.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_MaximumNumberOfAlbumsReached">
+    <value>Importen var ikke vellykket. Maksimalt antall album er nådd.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_MaximumNumberOfPhotosPerAlbumReached">
+    <value>Importen var ikke vellykket. Maksimalt antall bilder per album er nådd.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_Unknown">
+    <value>Importen var ikke vellykket. Prøv igjen.</value>
   </data>
   <data name="PhotoImportFolderStatus_Value_Failed">
     <value>Importen mislyktes</value>
