--- a/src/ProtonDrive.App.Windows/Resources/Strings.ru.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.ru.resx
@@ -935,9 +935,6 @@
   <data name="Main_Photos_Folders_Error_ImportFailed">
     <value>Import failed. Try removing the folder and importing it again. If the issue persists, please contact support.</value>
   </data>
-  <data name="PhotoImportErrorCode_Value_Unknown">
-    <value>Import failed. Try again.</value>
-  </data>
   <data name="Main_Photos_Folders_ImportedItemsFormat">
     <value>Imported {0} of {1}</value>
   </data>
@@ -1396,6 +1393,18 @@
   </data>
   <data name="Onboarding_UpgradeStorage_Title">
     <value>Получите больше места в хранилище</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_AlbumDoesNotExist">
+    <value>Import failed. The album does not exist.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_MaximumNumberOfAlbumsReached">
+    <value>Import failed. Maximum number of albums reached.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_MaximumNumberOfPhotosPerAlbumReached">
+    <value>Import failed. Maximum number of photos per album reached.</value>
+  </data>
+  <data name="PhotoImportErrorCode_Value_Unknown">
+    <value>Import failed. Try again.</value>
   </data>
   <data name="PhotoImportFolderStatus_Value_Failed">
     <value>Импорт не удался</value>
